<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainCreatePray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15dp"
        android:background="@drawable/shape_pink_outline_solid"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_30dp"
        android:paddingLeft="@dimen/_20dp"
        android:paddingRight="@dimen/_20dp"
        android:paddingTop="@dimen/_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_post_as_anonymous"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/postAnonym_IV"
                style="@style/SwitchCompatStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:checked="false" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/label_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/title_ET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/shape_edittext"
            android:hint="@string/hint_enter_title_here"
            android:paddingStart="@dimen/_10dp"
            android:maxLength="40"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/label_category"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp" />

        <RelativeLayout
            android:id="@+id/slctCat_View"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/shape_edittext">

            <TextView
                android:id="@+id/slctCat_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/down_IV"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_5dp"
                android:hint="@string/label_select_category"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp" />


            <ImageView
                android:id="@+id/down_IV"
                android:layout_width="@dimen/_12dp"
                android:layout_height="@dimen/_12dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_5dp"
                android:src="@drawable/ic_down"
                app:tint="@color/black" />
            <Spinner
                android:id="@+id/selecter_SPN"
                android:layout_width="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:gravity="start"
                android:padding="0dp"
                android:visibility="visible"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_height="match_parent"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/label_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp" />

        <EditText
            android:id="@+id/msg_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/shape_edittext"
            android:gravity="top"
            android:hint="@string/hint_enter_message"
            android:inputType="textMultiLine"
            android:lines="4"
            android:paddingBottom="@dimen/_5dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingTop="@dimen/_10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp" />

        <Button
            android:id="@+id/post_BTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@drawable/btn_shape_dark_yellow"
            android:text="@string/btn_post"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>