<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_"
    android:id="@+id/parent">

    <LinearLayout
        android:layout_weight="0.9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appLogo_IM"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_100dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="8dp"
            android:src="@drawable/app_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/acntExist_TV"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_acnt_exist"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_BT"
            android:layout_width="@dimen/_280dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_shape_white_outline"
            android:text="@string/bt_log_in"
            android:contentDescription="login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_margin="@dimen/_20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle_shape"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/label_or"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="@dimen/_12sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/label_new_user"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_BT"
            android:layout_width="@dimen/_280dp"
            android:layout_height="@dimen/_40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_shape_white"
            android:text="@string/bt_sign_up"
            android:contentDescription="signup"
            android:textAllCaps="false"
            android:textSize="@dimen/_18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_lay"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <View
            android:id="@+id/divView"
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/pad10"
            android:paddingRight="@dimen/pad10"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/label_app_info"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sp"
                android:layout_marginRight="8dp" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appInfo_IM"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:padding="7dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:contentDescription="application information"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_right_arrow" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>